--- a/src/pages/todo-editor/todo-editor.html
+++ b/src/pages/todo-editor/todo-editor.html
@@ -17,18 +17,26 @@
 
 <ion-content padding>
   <ion-list>
-    <ion-list-header no-line no-padding>編集</ion-list-header>
+    <ion-list-header>編集</ion-list-header>
     <ion-item>
       <ion-label floating>TODO</ion-label>
       <ion-input type="text" [(ngModel)]="todo.task"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label floating>Limit</ion-label>
-      <ion-datetime displayFormat="YYYY/MM/DD" [(ngModel)]="todo.limit"></ion-datetime>
+      <ion-datetime displayFormat="YYYY/MM/DD" [ngModel]="todo.limit" (ngModelChange)="onChangeOfLimit($event)"></ion-datetime>
     </ion-item>
     <ion-item>
       <ion-label floating>Memo</ion-label>
       <ion-input type="text" [(ngModel)]="todo.memo"></ion-input>
+    </ion-item>
+    <ion-item no-lines radio-group [ngModel]="todo.state.name" (ngModelChange)="onChangeOfState($event)">
+      <ion-label stacked>State</ion-label>
+      <ion-item *ngFor="let state of todoManager.statusList"
+       item-content color="{{state.color}}">
+        <ion-label>{{state.name}}</ion-label>
+        <ion-radio [disabled]="isDisabledToState(state)" value="{{state.name}}"></ion-radio>
+      </ion-item>
     </ion-item>
   </ion-list>
 </ion-content>
