--- a/src/pages/todo-list/todo-list.html
+++ b/src/pages/todo-list/todo-list.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>todo-list</ion-title>
+    <ion-title>やることリスト</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="editTodo(createTodo())">
         <ion-icon name="add"></ion-icon>
@@ -21,7 +21,7 @@
 <ion-content padding>
   <ion-list>
     <ion-item-sliding *ngFor="let todo of todoList">
-      <ion-item [color]="todo.isExpired()?'limited':'light'" no-padding no-line detail-push (tap)="editTodo(todo)">
+      <ion-item [color]="todo.state.color" no-padding no-lines detail-push (tap)="editTodo(todo)">
         <h2 padding-left>{{todo.task}}</h2>
         <p padding-left>
           <ion-note>期限: </ion-note><span>{{todo.limit}}</span>
