--- a/src/pages/todo-editor/todo-editor.html
+++ b/src/pages/todo-editor/todo-editor.html
@@ -7,6 +7,7 @@
 <ion-header>
 
   <ion-navbar>
+    <ion-title>編集</ion-title>
     <ion-buttons end>
       <button ion-button [disabled]="!todo.task" (click)="done()">OK</button>
     </ion-buttons>
@@ -17,7 +18,6 @@
 
 <ion-content padding>
   <ion-list>
-    <ion-list-header>編集</ion-list-header>
     <ion-item>
       <ion-label floating>TODO</ion-label>
       <ion-input type="text" [(ngModel)]="todo.task"></ion-input>
